[package]
name = "ics-tools"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
hex = "0.4.3"
hmac = "0.12.0"
ical = "0.7.0"
reqwest = "0.11.9"
rocket = "0.5.0-rc.1"
serde = "1.0"
sha2 = "0.10.1"
structopt = "0.3.26"
toml = "0.5.8"
tracing = "0.1.30"
tracing-subscriber = "0.3.8"
url = { version = "2.2", features = ["serde"] }
